# git

./: .gitignore  Cargo.toml  Makefile  README.md  bindgen-wrapper.h  build.rs  dir.c  meson.build  read-cache.c  varint.c  varint.h  xdiff-interface.c
builtin/: replay.c
rust/: Cargo.toml  build-crate.sh
rust/gitcore/: Cargo.toml
rust/gitcore/src/: varint.rs
rust/interop/src/: ivec.rs
rust/link-with-c/src/: lib.rs
rust/xdiff/src/: xdiff.rs  xdiffi.rs  xemit.rs  xtypes.rs
src/: lib.rs  replay.rs
xdiff/: ivec.c  ivec.h  xdiff.h  xdiffi.h  xemit.c  xemit.h  xinclude.h  xutils.c  xutils.h
