[package]
name = "gitcore"
version = "0.1.0"
edition = "2021"

[lib]
name = "gitcore"
path = "src/lib.rs"
## staticlib to generate lib<crate>.a for use by gcc
## cdylib (optional) to generate lib<crate>.so for use by gcc
## rlib is required by the rust unit tests
crate-type = ["staticlib", "rlib"]

[dependencies]
